--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
 spring.datasource.url=jdbc:mysql://localhost:3306/coconoon?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=Asia/Seoul
 spring.datasource.username=root
-spring.datasource.password=1234
+spring.datasource.password=rudflxla12
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
