--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,19 +1,20 @@
 spring:
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    password: rudflxla12
+    password: admin
     url: jdbc:mysql://localhost:3306/coconoon?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=Asia/Seoul
     username: root
-  // rudflxla12 admin 1234
-
-spring:
+#rudflxla12 admin 1234
   mail:
     host: smtp.gmail.com
     port: 587
     username: 00woogi@gmail.com
+    password: fnql1234!
     properties:
       mail:
         smtp:
           auth: true
           starttls:
             enable: true
+logging:
+  config: classpath:log4j2.yml
