--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,7 +1,9 @@
 spring:
+  profiles:
+    include: oauth
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    password: rudflxla12
+    password: 1234
     url: jdbc:mysql://localhost:3306/coconoon?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=Asia/Seoul
     username: root
   #rudflxla12 admin 1234
@@ -16,5 +18,6 @@ spring:
           auth: true
           starttls:
             enable: true
+
 logging:
   config: classpath:log4j2.yml
