--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,7 +3,7 @@ spring:
     include: oauth
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    password: rudflxla12
+    password: 1234
     url: jdbc:mysql://localhost:3306/coconoon?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=Asia/Seoul
     username: root
   #rudflxla12 admin 1234
@@ -25,5 +25,3 @@ logging:
 kakao:
       js: abb0c5392e88307fec21ccc5d3ef776a
 
-test:
-oingdaddy: Oing is the prettiest in the world!
