구글 로그인 중단

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,7 +3,7 @@ spring:
     include: oauth
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    password: admin
+    password: 1234
     url: jdbc:mysql://localhost:3306/coconoon?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=Asia/Seoul
     username: root
   #rudflxla12 admin 1234
@@ -18,6 +18,14 @@ spring:
           auth: true
           starttls:
             enable: true
+  security:
+    oauth2:
+      client:
+        registration:
+          google:
+            client-id: 918079045792-2t4t5dqtdfgdj75d6vqshnuj3jm6lrr3.apps.googleusercontent.com
+            client-secret: q5dRwKeubnhuXtsK55uF7PWc
+            scope: email
 
 logging:
   config: classpath:log4j2.yml
