--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,7 +3,7 @@ spring:
     include: oauth
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    password: 1234
+    password: rudflxla12
     url: jdbc:mysql://localhost:3306/coconoon?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=Asia/Seoul
     username: root
   #rudflxla12 admin 1234
@@ -25,7 +25,7 @@ spring:
           google:
             client-id: 918079045792-2t4t5dqtdfgdj75d6vqshnuj3jm6lrr3.apps.googleusercontent.com
             client-secret: q5dRwKeubnhuXtsK55uF7PWc
-            scope: email
+            scope: profile, email
 
 logging:
   config: classpath:log4j2.yml
