--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,10 +1,8 @@
 spring:
-  profiles:
-    include: oauth
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    password: rudflxla12
     url: jdbc:mysql://localhost:3306/coconoon?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=Asia/Seoul
+    password: 1234
     username: root
   #rudflxla12 admin 1234
   mail:
